fixed spacing on top story

--- a/rwds.css
+++ b/rwds.css
@@ -599,15 +599,25 @@ div.quarto-post a {
   margin: 0 auto;
   margin-bottom: 1em; 
   box-sizing: border-box;
+  height: auto;
+  display: flex;
+  align-items: center;
 }
 
+.top-story img {
+  height: 100%;
+  object-fit: cover;
+}
+
+
 .top-story-text {
-  margin: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   margin-top: 0;
 }
 
-.top-story-text h2 > a {
-  margin-top: 1.5rem;
+.top-story-text h2 {
+  margin-top: 1rem;
 }
 
 .top-story-text p {
@@ -671,8 +681,8 @@ div.quarto-post a {
 
 .pullout-text h2 {
   text-align: center;
-  margin-left: 8vw;
-  margin-right: 8vw;
+  margin-left: 5vw;
+  margin-right: 5vw;
   color: white;
   margin-top: 0.5em;
 }
@@ -682,6 +692,8 @@ div.quarto-post a {
   font-family: 'Oswald';
   font-weight: 500;
   color: white;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
   text-transform: uppercase;
   text-decoration: underline;
   text-decoration-color: #939bc9;
